--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -42,6 +42,14 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Create">Додати книгу</a>
                                 </li>
                             }
+                            @if (ViewBag.IsAdministrator == true)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-danger fw-bold" asp-area="" asp-controller="Admin" asp-action="Index">
+                                        <i class="fas fa-cogs"></i> Панель адміністрування
+                                    </a>
+                                </li>
+                            }
                         }
                     </ul>
                     <ul class="navbar-nav">
