--- a/UI/Views/Account/Register.cshtml
+++ b/UI/Views/Account/Register.cshtml
@@ -28,6 +28,12 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
 
+             <div class="form-group mb-3">
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div> 
+
             <div class="form-group mb-3">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
