--- a/UI/Views/Orders/Edit.cshtml
+++ b/UI/Views/Orders/Edit.cshtml
@@ -7,8 +7,7 @@
 
 <div class="row">
     <div class="col-md-8 offset-md-2">
-        <form asp-action="Edit" method="post">
-            @Html.AntiForgeryToken()
+        <form asp-action="Edit" asp-route-id="@Model.Id" method="post">
             <input type="hidden" asp-for="Id" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
